--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.14.1",
     "redux": "^5.0.1",
     "sass": "^1.77.8",
+    "styled-components": "^6.1.13",
     "swr": "^2.2.5",
     "toastr": "^2.1.4",
     "vite": "^5.4.0",
@@ -54,6 +56,7 @@
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-outside-click-handler": "^1.3.3",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
     "eslint": "^8.57.0",
