--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bem-cn": "^3.0.1",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-outside-click-handler": "^1.3.0",
@@ -20,7 +21,6 @@
     "react-spinners": "^0.14.1",
     "redux": "^5.0.1",
     "sass": "^1.77.8",
-    "styled-components": "^6.1.13",
     "swr": "^2.2.5",
     "toastr": "^2.1.4",
     "vite": "^5.4.0",
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
