--- a/package.json
+++ b/package.json
@@ -30,7 +30,22 @@
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint:styles": "stylelint '**/*.{scss,ts,tsx}' --fix --config .stylelintrc.json",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.ts?(x)": [
+      "tsc --noEmit",
+      "eslint --fix",
+      "stylelint --fix"
+    ],
+    "*.js": [
+      "eslint --fix"
+    ],
+    "*.scss": [
+      "stylelint --fix"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -60,14 +75,20 @@
     "@types/react-outside-click-handler": "^1.3.3",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
     "@typescript-eslint/parser": "^8.0.1",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-prettier": "^5.0.2",
+    "stylelint-scss": "^6.9.0",
     "typescript": "^4.9.5"
   }
 }
